UNDERFITTING and OVERFITTING

--- a/nb.ipynb
+++ b/nb.ipynb
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "1115.7467183128902"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,7 @@
        "DecisionTreeRegressor()"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,16 +662,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "275755.721540779"
+       "271929.29718097695"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,6 +679,79 @@
    "source": [
     "val_prediction = melbourne_model.predict(val_X)\n",
     "mean_absolute_error(val_prediction,val_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Underfitting and Overfitting\n",
+    "|         |Underfitting | Overfitting| \n",
+    "|---------|------------ | -----------|\n",
+    "|Desribe|Capturing spurious patterns that won't recur in the future, leading to less accurate| Failing to capture relevant patterns|\n",
+    "|Tree Depth| **TOO DEEP** | **TOO SHALLOW** |\n",
+    "\n",
+    "We should to find the suitable tree depth to optimize the model! Control the tree depth by `max_leaf_nodes` argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getMAE(max_leaf_nodes,train_X,val_X,train_y,val_y):\n",
+    "    model = DecisionTreeRegressor(max_leaf_nodes=max_leaf_nodes,random_state=0)\n",
+    "    model.fit(train_X,train_y)\n",
+    "    pred_val = model.predict(val_X)\n",
+    "    mae = mean_absolute_error(val_y,pred_val)\n",
+    "    return mae"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compare the accruancy \n",
+    "For different `mln`(max_leaf_nodes) in `LEAFS`. We call getMAE to show its model's MAE."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LEAFS = [5,50,500,5000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max leaf nodes:5 \t\t Mean Absolute Error 385696\n",
+      "Max leaf nodes:50 \t\t Mean Absolute Error 279794\n",
+      "Max leaf nodes:500 \t\t Mean Absolute Error 261718\n",
+      "Max leaf nodes:5000 \t\t Mean Absolute Error 271320\n"
+     ]
+    }
+   ],
+   "source": [
+    "for mln in LEAFS :\n",
+    "    cur_mae = getMAE(mln,train_X,val_X,train_y,val_y)\n",
+    "    print(\"Max leaf nodes:%d \\t\\t Mean Absolute Error %d\" %(mln,cur_mae))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Of the options listed, 500 is the optimal number of leaves."
    ]
   }
  ],
